# ecu-simulation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  GLOSSAR.md  Makefile  README.md  __init__.py  __main__.py  config.py  demand.py  exchange.py  main.py  observations.py  oxyde_config.py  planetary_constants.py  prices.py  pyproject.toml  simulation.py
app/: __main__.py
app/logic/: __init__.py  observations.py  prices.py  vej.py
app/simulation/: __init__.py  simulation.py
app/ui/web/: __init__.py  report.py  report_view.px  view_model.py
cms/: README.md  __init__.py  locale_switch.py  menu.py  pages.py  setup.py
cms/templates/: content_page.px
ecu/: GLOSSAR.md  __init__.py  __main__.py
ecu/cms/: README.md  __init__.py  admin.py  content.py  menu.py  models.py  oxyde_config.py  routes.py  setup.py  views.px
ecu/cms/data/: cms.db
ecu/cms/migrations/: 0001_create_pages_table.py
ecu/logic/: __init__.py  exchange.py  initial_prices.py  observations.py  planetary_constants.py  price_config.py  prices.py  vej.py
ecu/ragtail/: README.md  __init__.py  menu.py  oxyde_config.py  pages.py  seed.py  setup.py
ecu/ragtail/templates/: content_page.px
ecu/simulation/: __init__.py  cli_simulation.py  config.py  consumption_budget.py  demand.py  report_aggregates.py  run_params.py  simulation.py
ecu/ui/web/: README.md  app.py  chart_payload.py  home.px  i18n.py  layout.px  report.py  report_logic.py  (+5 more)
logic/: __init__.py  exchange.py  initial_prices.py  observations.py  planetary_constants.py  price_config.py  prices.py
scripts/: docker-entrypoint.sh
simulation/: __init__.py  cli_simulation.py  config.py  consumption_budget.py  demand.py  report_aggregates.py  run_params.py  simulation.py
tests/: test_initial_prices_utilization.py  test_prices_soft_path.py  test_simulation_edges.py  test_simulation_i18n.py  test_soft_path_mean_utilization_month_delta.py  test_web_query_params.py
ui/: __init__.py
ui/web/: README.md  app.py  chart_payload.py  home.px  package-lock.json  package.json  report.px  report_logic.py  report_view.px  simulation_page.py  simulation_view.px  tailwind.config.js  view_model.py
(+7 files in other folders)
