[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ecu-simulation"
version = "0.1.0"
description = "ECU-Terminalsimulation (planetare Grenzen, Schattenpreise)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
web = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.24",
    "python-jsx",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["ecu"]

[tool.hatch.build.targets.sdist]
include = [
    "/ecu",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
